# sphinx-mac2

./: AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
src/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  dummy-config.in
src/add-ons/: Make-inc.am  Makefile.am  Makefile.in  SPHInX.cpp  SPHInX.h  SxAOMatTB.cpp  SxAOMatTB.h  SxDefectConc.cpp  SxDefectConc.h  SxDielec.cpp  SxDielec.h  SxDynMat.cpp  SxDynMat.h  SxEPRHyper.cpp  SxEPRHyper.h  SxExt.h  SxGetSKFiles.cpp  SxGetSKFiles.h  SxMurn.cpp  SxMurn.h  SxPDOS.cpp  SxPDOS.h  SxPartialRho.cpp  SxPartialRho.h  SxPhonon.cpp  SxPhonon.h  SxQuamol.cpp  SxQuamol.h  SxQuamolRedSubSpace.cpp  SxQuamolRedSubSpace.h  SxSlab.cpp  SxSlab.h  SxTestbed.h  SxThermo.cpp  SxThermo.h  SxVibrations.cpp  SxVibrations.h  SxWannier.cpp  SxWannier.h  SxWannierHam.cpp  (+5 more)
src/addutil/: Make-inc.am  Makefile.am  Makefile.in  SxAddUtil.h  SxCliStandard.cpp  SxCliStandard.h  SxDefectAlignUtil.cpp  SxDefectAlignUtil.h  SxFourierInterpol.cpp  SxFourierInterpol.h  SxGauss.cpp  SxGauss.h  SxIonicCoreFit.cpp  SxIonicCoreFit.h  SxKFinDiffs.cpp  SxKFinDiffs.h  SxKGrid.cpp  SxKGrid.h  SxLocpot.cpp  SxLocpot.h  SxSpaceSeparator.cpp  SxSpaceSeparator.h  SxSpectrum.cpp  SxSpectrum.h
src/classic/: Make-inc.am  Makefile.am  Makefile.in  SxClassic.h  SxEAM.cpp  SxEAM.h  SxForst.cpp  SxForst.h  SxForstData.cpp  SxForstData.h  SxStillingerWeber.cpp  SxStillingerWeber.h  SxTaylorExpPotential.cpp  SxTaylorExpPotential.h
src/dft/: Make-inc.am  Makefile.am  Makefile.in  SxAtomicOrbitals.cpp  SxAtomicOrbitals.h  SxAtomicOrbitalsGR.cpp  SxAtomicOrbitalsGR.h  SxBasisAug.h  SxBlockDensityMatrix.cpp  SxBlockDensityMatrix.h  SxBundle3.h  SxBundle3.hpp  SxDFT.h  SxDFTBFilesReader.cpp  SxDFTBFilesReader.h  SxDFTConfig.h  SxDFTConfig.h.in  SxDensity.cpp  SxDensity.h  SxDipoleCorrZ.cpp  SxDipoleCorrZ.h  SxEESGProj.cpp  SxEESGProj.h  SxFermi.cpp  SxFermi.h  SxHamInit.cpp  SxHamInit.h  SxHamSolver.cpp  SxHamSolver.h  SxHamiltonian.cpp  SxHamiltonian.h  SxHubbardMO.cpp  SxHubbardMO.h  SxHubbardU.cpp  SxHubbardU.h  SxInitKP.cpp  SxInitKP.h  SxInitPAW.cpp  SxInitPAW.h  SxInitPW.cpp  (+66 more)
src/dft/examples/: Makefile.am  Makefile.in  sxatomorb.cpp
src/dirac/: Make-inc.am  Makefile.am  Makefile.in  SxAOBasis.cpp  SxAOBasis.h  SxBasis.cpp  SxBasis.h  SxDiracLib.h  SxGBasis.cpp  SxGBasis.h  SxGkBasis.cpp  SxGkBasis.h  SxKPoints.cpp  SxKPoints.h  SxOverlap.cpp  SxOverlap.h  SxPWOverlap.cpp  SxPWOverlap.h  SxProjMatrix.h  SxProjMatrix.hpp  SxQuantumNumbers.h  SxRBasis.cpp  SxRBasis.h  SxRadBasis.cpp  SxRadBasis.h  SxRadialBasis.cpp  SxRadialBasis.h  SxTypes.h
src/doc/: Makefile.am  Makefile.in
src/exx/: Make-inc.am  Makefile.am  Makefile.in  SxChi0.cpp  SxChi0.h  SxExx.cpp  SxExx.h  SxExxSolver.cpp  SxExxSolver.h  SxFockGk.cpp  SxFockGk.h  SxFockTimer.h  SxRhoIndG.cpp  SxRhoIndG.h  SxRhoMixerG.cpp  SxRhoMixerG.h  SxStars.cpp  SxStars.h  SxSymFockGk.cpp  SxSymFockGk.h
src/geom/: Make-inc.am  Makefile.am  Makefile.in  SxAims.cpp  SxAims.h  SxArtifactFilter.cpp  SxArtifactFilter.h  SxAtomInfo.cpp  SxAtomInfo.h  SxAtomicStructure.cpp  SxAtomicStructure.h  SxAtomicStructure.hpp  SxCell.cpp  SxCell.h  SxElemDB.cpp  SxElemDB.h  SxEquivalence.cpp  SxEquivalence.h  SxForceSym.cpp  SxForceSym.h  SxGeom.h  SxGrid.cpp  SxGrid.h  SxLatticeShells.cpp  SxLatticeShells.h  SxLinEquation.cpp  SxLinEquation.h  SxNeighbors.cpp  SxNeighbors.h  SxPDBFast.cpp  SxPDBFast.h  SxPoscar.cpp  SxPoscar.h  SxPotential.cpp  SxPotential.h  SxRotation.cpp  SxRotation.h  SxSpeciesData.cpp  SxSpeciesData.h  SxSpeciesRef.cpp  (+10 more)
src/geom/examples/: Makefile.am  Makefile.in  sxatomstructbase.cpp  sxatomstructderiv.cpp
src/io2/: Make-inc.am  Makefile.am  Makefile.in  SxBinIO.cpp  SxBinIO.h  SxHDF5.cpp  SxHDF5.h  SxIO2.h  SxParallelInit.cpp  SxParallelInit.h  SxParser.cpp  SxParser.h  SxParser.lex.cpp  SxParser.lpp  SxParser.tab.cpp  SxParser.tab.hpp  SxParser.ypp  SxReadXml.cpp  SxReadXml.h  SxSimpleParser.cpp  SxSimpleParser.h  SxSymbolTable.cpp  SxSymbolTable.h  SxTextIO.cpp  SxTextIO.h
src/io2/examples/: Make-inc.am  Makefile.am  Makefile.in  sxio.cpp  sxparser.cpp
src/lgpl/: Make-inc.am  Makefile.am  Makefile.in  sobol.cpp
src/playground/: Makefile.am
src/share/: Makefile.am  Makefile.in
src/share/sphinx/: Makefile.am  Makefile.in
src/share/sphinx/std/: Makefile.am  Makefile.in  aoBasis.std  aomatTB.std  defectalign.std  defects.std  forces.std  harmpot.std  interactionBlocker.std  kp.std  kpHamiltonian.std  kpParameters.std  pDos.std  paw.std  quamol.std  ricqn.std  ricts.std  scf.std  sphinx.std  strain.std  wannier.std
src/share/sphinx/structures/: Makefile.am  Makefile.in
src/struct/: Make-inc.am  Makefile.am  Makefile.in  SxDriftFilter.h  SxFrozenPhonon.cpp  SxFrozenPhonon.h  SxHarmApprox.cpp  SxHarmApprox.h  SxHarmonicPotential.cpp  SxHarmonicPotential.h  SxHessian.cpp  SxHessian.h  SxHessianOps.cpp  SxHessianOps.h  SxLineFilter.cpp  SxLineFilter.h  SxMolDyn.cpp  SxMolDyn.h  SxRedundantCoords.cpp  SxRedundantCoords.h  SxSecondaryStructure.cpp  SxSecondaryStructure.h  SxStickyFilter.cpp  SxStickyFilter.h  SxStruct.h  SxStructOpt.cpp  SxStructOpt.h  SxSynchronousTransit.cpp  SxSynchronousTransit.h  SxThermodynamics.cpp  SxThermodynamics.h  SxTimeCorr.cpp  SxTimeCorr.h  SxTrajectory.cpp  SxTrajectory.h
src/struct/examples/: Makefile.am  Makefile.in
src/system/: SxTemplate.cpp  SxTemplate.h  changeToNewVec.sh  make.am.apps  make.am.components  make.am.filelist  sxsetup.sh.ac.in  sxvimsyntax.sh
src/tools/: Make-inc.am  Makefile.am  Makefile.in  Sx2Aims.cpp  Sx2DX.cpp  Sx2PDB.cpp  Sx2Poscar.cpp  Sx2XSF.cpp  Sx2XYZ.cpp  Sx2gwst.cpp  SxAOJoin.cpp  SxAOMat.cpp  SxAtomicSpin.cpp  SxBader.cpp  (+60 more)
sxaccelerate/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  setup.sh
sxaccelerate/src/apps/tests/: Makefile.am  Makefile.in
sxaccelerate/src/io/: Make-inc.am  Makefile.am  Makefile.in  SxFileParser.cpp  SxFileParser.h
sxaccelerate/src/io/examples/: Make-inc.am  Makefile.am  Makefile.in
sxaccelerate/src/io/examples/plugins/: Makefile.in
(+212 files in other folders)
