# ---------------------------------------------------------------------------
#
#      The ab-initio based multiscale library
#
#                  S / P H I / n X
#
#      Copyright:  Max-Planck-Institut fuer Eisenforschung GmbH
#                  40237 Duesseldorf, Germany
#
#      Contact:    https://sxrepo.mpie.de
#      Authors:    see sphinx/AUTHORS
#      License:    see sphinx/LICENSE
#
# ---------------------------------------------------------------------------


SUBDIRS = std structures

dist_pkgdata_DATA  = empty.sx parameters.sx parallelHierarchy.sx
nobase_dist_pkgdata_DATA = species/elements.sx
EXTRA_DIST=potentials potentials_eam species species_dftb
