# ---------------------------------------------------------------------------
#
#      The ab-initio based multiscale library
#
#                  S / P H I / n X
#
#      Copyright:  Max-Planck-Institut fuer Eisenforschung GmbH
#                  40237 Duesseldorf, Germany
#
#      Contact:    https://sxrepo.mpie.de
#      Authors:    see sphinx/AUTHORS
#      License:    see sphinx/LICENSE
#
# ---------------------------------------------------------------------------


pkgdata_stddir = $(pkgdatadir)/std
dist_pkgdata_std_DATA = any.std aoBasis.std aomatTB.std bandstruct.std basis.std ccg.std defectalign.std defects.std diag.std diffEqtn.std dispersion.std eamPot.std eam.std elmin.std extControl.std forces.std forst.std frozenPhonon.std gsexx.std harmpot.std hSqrCG.std imagecharge.std initialGuess.std interactionBlocker.std kpHamiltonian.std kpParameters.std kp.std lcao.std lingrad.std linqnPAW.std linqn.std materialMap.std matrix.std moldyn.std murn.std odp.std optim.std parallelHierarchy.std paw.std pDos.std phononRef.std phononSet.std printFC.std printMolden.std pse.std pseudoPot.std qn.std quamol.std ricqn.std ricts.std scf.std sd.std sh.std skData.std sphinx.std stexx.std strainFit.std strain.std structure.std taylorExpPotential.std tb.std tdOutput.std vdwCorrection.std vibrations.std wannier.std xtraF.std 
